# pokecrossword-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: cnf_generator.py  main.py  schemas.py  utils.py
data/: pokemon_names.json
docs/: test_scenarios.md
tests/: test_cnf_generator.py  test_main.py  test_utils.py
tests/data/: pokemon_names.json
