[project]
name = "pokecrossword-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.6",
    "gunicorn>=23.0.0",
    "httpx>=0.28.1",
    "hypothesis>=6.122.3",
    "pydantic>=2.10.3",
    "pytest>=8.3.4",
    "python-sat>=1.8.dev13",
]
